--- a/src/assets/examples/customer-select/customer-select.component.html
+++ b/src/assets/examples/customer-select/customer-select.component.html
@@ -1,4 +1,4 @@
-<viz-customer-select menuShown="true" value="awfeawf" #test (close)="menuClose()">
+<viz-customer-select menuShown="true" value="awfeawf" #test (close)="menuClose()" (open)="menuOpen()">
 
     
 
