--- a/libs/components/date-range-picker/viz-date-range-picker.component.html
+++ b/libs/components/date-range-picker/viz-date-range-picker.component.html
@@ -7,8 +7,8 @@
           [ngModel]="date"
           (ngModelChange)="onInputDate($event)"
           name="date"
-          (dateInput)="onDateInput($event)"
-          (dateChange)="onDateChange($event)"
+          (dateInput)="dateInput.emit($event)"
+          (dateChange)="dateChange.emit($event)"
           [typeMode]="typeMode">
         <mat-range-datepicker
           #resultPicker [rangeMode]="rangeMode" (closed)="this.onClose($event)" [typeMode]="typeMode">
