--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,7 +15,7 @@
           // margin-right: 30px;
           // min-width: 100px;
           padding: 0px 24px;
-          min-width: auto;
+          // min-width: auto;
 
           /* Components: */
           font-family: Soleto;
