--- a/src/assets/examples/badge-basic/badge-basic.component.html
+++ b/src/assets/examples/badge-basic/badge-basic.component.html
@@ -1,2 +1,16 @@
-<span matBadge="15" matBadgeOverlap="false" matBadgeColor="accent" class="viz-text-badge">Text with a badge</span>
-<span matBadge="1,234" matBadgeOverlap="false" matBadgeColor="warn" class="viz-text-badge">Text with a badge</span>
+<div class="example-wrapper">
+  <span
+    matBadge="15"
+    matBadgeOverlap="false"
+    matBadgeColor="accent"
+    class="viz-text-badge"
+    >Text with a badge</span
+  >
+  <span
+    matBadge="1,234"
+    matBadgeOverlap="false"
+    matBadgeColor="warn"
+    class="viz-text-badge"
+    >Text with a badge</span
+  >
+</div>
