--- a/src/assets/examples/badge-icon/badge-icon.component.html
+++ b/src/assets/examples/badge-icon/badge-icon.component.html
@@ -1,2 +1,8 @@
-<mat-icon matBadge="15" matBadgeColor="accent" matBadgePosition="above after">folder</mat-icon>
-<mat-icon matBadge="1,234" matBadgeColor="warn" matBadgePosition="above after">folder</mat-icon>
+<div class="example-wrapper">
+  <mat-icon matBadge="15" matBadgeColor="accent" matBadgePosition="above after"
+    >folder</mat-icon
+  >
+  <mat-icon matBadge="1,234" matBadgeColor="warn" matBadgePosition="above after"
+    >folder</mat-icon
+  >
+</div>
