--- a/src/assets/examples/button-basic/button-basic.component.scss
+++ b/src/assets/examples/button-basic/button-basic.component.scss
@@ -1,8 +1,4 @@
-:host {
-  // .mat-stroked-button {
-  //   border: 1px solid #F1F1F1;
-  // }
-  button {
-    margin: 0 24px;
-  }
+.example-wrapper {
+  margin: 0 auto;
+  width: 88px
 }
