--- a/src/assets/examples/button-icon-right/button-icon-right.component.html
+++ b/src/assets/examples/button-icon-right/button-icon-right.component.html
@@ -1,6 +1,8 @@
-<button mat-raised-button color="primary">
+<div class="example-wrapper">
+  <button mat-raised-button color="primary">
     <div class="viz-button-right-icon">
-        Button
-        <mat-icon>check</mat-icon>
+      Button
+      <mat-icon>check</mat-icon>
     </div>
-</button>
+  </button>
+</div>
