--- a/src/assets/examples/button-stroked/button-stroked.component.html
+++ b/src/assets/examples/button-stroked/button-stroked.component.html
@@ -1,2 +1,3 @@
-
-<button mat-stroked-button color="primary">Secondary</button>
+<div class="example-wrapper">
+  <button mat-stroked-button color="primary">Secondary</button>
+</div>
