--- a/src/assets/examples/checkbox-basic/checkbox-basic.component.html
+++ b/src/assets/examples/checkbox-basic/checkbox-basic.component.html
@@ -1,1 +1,3 @@
-<mat-checkbox checked=true></mat-checkbox>
+<div class="example-centralization">
+  <mat-checkbox checked="true"></mat-checkbox>
+</div>
