--- a/src/assets/examples/checkbox-disable/checkbox-disable.component.html
+++ b/src/assets/examples/checkbox-disable/checkbox-disable.component.html
@@ -1,1 +1,3 @@
-<mat-checkbox checked=true disabled="true"></mat-checkbox>
+<div class="example-centralization">
+  <mat-checkbox checked="true" disabled="true"></mat-checkbox>
+</div>
