--- a/src/assets/examples/checkbox-indetermine/checkbox-indetermine.component.html
+++ b/src/assets/examples/checkbox-indetermine/checkbox-indetermine.component.html
@@ -1,1 +1,3 @@
-<mat-checkbox [indeterminate]=true></mat-checkbox>
+<div class="example-centralization">
+  <mat-checkbox [indeterminate]="true"></mat-checkbox>
+</div>
