--- a/src/assets/examples/chip-disable/chip-disable.component.html
+++ b/src/assets/examples/chip-disable/chip-disable.component.html
@@ -1,1 +1,3 @@
-<mat-chip disabled="true">Input Chip <mat-icon>cancel</mat-icon></mat-chip>
+<mat-chip-list>
+  <mat-chip disabled>Input Chip <mat-icon>cancel</mat-icon></mat-chip>
+</mat-chip-list>
