--- a/src/assets/examples/date-picker-basic/date-picker-basic.component.html
+++ b/src/assets/examples/date-picker-basic/date-picker-basic.component.html
@@ -1,1 +1,9 @@
-<viz-date-range-picker [date]="dateRange" (onApply)="applyDateRange($event)" typeMode="date" rangeMode placeholder="Choose a date range"></viz-date-range-picker>
+<div class="example-wrapper">
+  <viz-date-range-picker
+    [date]="dateRange"
+    (onApply)="applyDateRange($event)"
+    typeMode="date"
+    rangeMode
+    placeholder="Choose a date range"
+  ></viz-date-range-picker>
+</div>
