--- a/src/assets/examples/date-picker-single/date-picker-single.component.html
+++ b/src/assets/examples/date-picker-single/date-picker-single.component.html
@@ -1,1 +1,7 @@
-<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="date" placeholder="Choose a date"></viz-date-range-picker>
+<div class="example-wrapper">
+  <viz-date-range-picker
+    (onApply)="applyDateRange($event)"
+    typeMode="date"
+    placeholder="Choose a date"
+  ></viz-date-range-picker>
+</div>
