--- a/src/assets/examples/dialog-basic/dialog-basic.component.html
+++ b/src/assets/examples/dialog-basic/dialog-basic.component.html
@@ -1,1 +1,3 @@
-<button mat-button (click)="openDialog()">Open dialog</button>
+<div class="example-wrapper">
+  <button mat-button (click)="openDialog()">Open dialog</button>
+</div>
