--- a/src/assets/examples/feedback-indicator-basic/feedback-indicator-basic.component.html
+++ b/src/assets/examples/feedback-indicator-basic/feedback-indicator-basic.component.html
@@ -1,5 +1,8 @@
-<viz-feedback-indicator 
-    message="Encounter ID failed 10 times with the error:  'invalid value'" 
-    type="error" 
-    iconType="warning">
-</viz-feedback-indicator>
+<div class="example-wrapper">
+  <viz-feedback-indicator
+    message="Encounter ID failed 10 times with the error:  'invalid value'"
+    type="error"
+    iconType="warning"
+  >
+  </viz-feedback-indicator>
+</div>
