--- a/src/assets/examples/feedback-indicator-success/feedback-indicator-success.component.html
+++ b/src/assets/examples/feedback-indicator-success/feedback-indicator-success.component.html
@@ -1,5 +1,8 @@
-<viz-feedback-indicator 
-    message="Your submission has been sent to production successfully." 
-    type="success" 
-    iconType="check_circle">
-</viz-feedback-indicator>
+<div class="example-wrapper">
+  <viz-feedback-indicator
+    message="Your submission has been sent to production successfully."
+    type="success"
+    iconType="check_circle"
+  >
+  </viz-feedback-indicator>
+</div>
