--- a/src/assets/examples/feedback-indicator-warning/feedback-indicator-warning.component.html
+++ b/src/assets/examples/feedback-indicator-warning/feedback-indicator-warning.component.html
@@ -1,5 +1,8 @@
-<viz-feedback-indicator 
-    message="Encounter ID was warned 08 times with the warning:  'invalid value'" 
-    type="warning" 
-    iconType="warning">
-</viz-feedback-indicator>
+<div class="example-wrapper">
+  <viz-feedback-indicator
+    message="Encounter ID was warned 08 times with the warning:  'invalid value'"
+    type="warning"
+    iconType="warning"
+  >
+  </viz-feedback-indicator>
+</div>
