--- a/src/assets/examples/form-field-basic/form-field-basic.component.html
+++ b/src/assets/examples/form-field-basic/form-field-basic.component.html
@@ -1,9 +1,13 @@
-<mat-form-field>
-  <input type="text"
-         matInput
-         autocomplete="off"
-         (focus)="value=''"
-         [(ngModel)]="value"
-         (blur)="value='All Member'"
-         placeholder="Member">
-</mat-form-field>
+<div class="example-centralization">
+  <mat-form-field>
+    <input
+      type="text"
+      matInput
+      autocomplete="off"
+      (focus)="value = ''"
+      [(ngModel)]="value"
+      (blur)="value = 'All Member'"
+      placeholder="Member"
+    />
+  </mat-form-field>
+</div>
