--- a/src/assets/examples/icon-basic/icon-basic.component.html
+++ b/src/assets/examples/icon-basic/icon-basic.component.html
@@ -1,11 +1,13 @@
-<mat-icon>check</mat-icon>
-<mat-icon>close</mat-icon>
-<mat-icon>autorenew</mat-icon>
-<mat-icon>cached</mat-icon>
-<mat-icon>search</mat-icon>
-<mat-icon>keyboard_arrow_down</mat-icon>
-<mat-icon>keyboard_arrow_up</mat-icon>
-<mat-icon>keyboard_arrow_left</mat-icon>
-<mat-icon>keyboard_arrow_right</mat-icon>
-<mat-icon>unfold_more</mat-icon>
-<mat-icon>ore_horiz</mat-icon>
+<div class="example-wrapper">
+  <mat-icon>check</mat-icon>
+  <mat-icon>close</mat-icon>
+  <mat-icon>autorenew</mat-icon>
+  <mat-icon>cached</mat-icon>
+  <mat-icon>search</mat-icon>
+  <mat-icon>keyboard_arrow_down</mat-icon>
+  <mat-icon>keyboard_arrow_up</mat-icon>
+  <mat-icon>keyboard_arrow_left</mat-icon>
+  <mat-icon>keyboard_arrow_right</mat-icon>
+  <mat-icon>unfold_more</mat-icon>
+  <mat-icon>ore_horiz</mat-icon>
+</div>
