--- a/src/assets/examples/icon-big/icon-big.component.html
+++ b/src/assets/examples/icon-big/icon-big.component.html
@@ -1,11 +1,13 @@
-<mat-icon class="viz-icon-big">check</mat-icon>
-<mat-icon class="viz-icon-big">close</mat-icon>
-<mat-icon class="viz-icon-big">autorenew</mat-icon>
-<mat-icon class="viz-icon-big">cached</mat-icon>
-<mat-icon class="viz-icon-big">search</mat-icon>
-<mat-icon class="viz-icon-big">keyboard_arrow_down</mat-icon>
-<mat-icon class="viz-icon-big">keyboard_arrow_up</mat-icon>
-<mat-icon class="viz-icon-big">keyboard_arrow_left</mat-icon>
-<mat-icon class="viz-icon-big">keyboard_arrow_right</mat-icon>
-<mat-icon class="viz-icon-big">unfold_more</mat-icon>
-<mat-icon class="viz-icon-big">ore_horiz</mat-icon>
+<div class="example-wrapper">
+  <mat-icon class="viz-icon-big">check</mat-icon>
+  <mat-icon class="viz-icon-big">close</mat-icon>
+  <mat-icon class="viz-icon-big">autorenew</mat-icon>
+  <mat-icon class="viz-icon-big">cached</mat-icon>
+  <mat-icon class="viz-icon-big">search</mat-icon>
+  <mat-icon class="viz-icon-big">keyboard_arrow_down</mat-icon>
+  <mat-icon class="viz-icon-big">keyboard_arrow_up</mat-icon>
+  <mat-icon class="viz-icon-big">keyboard_arrow_left</mat-icon>
+  <mat-icon class="viz-icon-big">keyboard_arrow_right</mat-icon>
+  <mat-icon class="viz-icon-big">unfold_more</mat-icon>
+  <mat-icon class="viz-icon-big">ore_horiz</mat-icon>
+</div>
