--- a/src/assets/examples/icon-small/icon-small.component.html
+++ b/src/assets/examples/icon-small/icon-small.component.html
@@ -1,11 +1,13 @@
-<mat-icon class="viz-icon-small">check</mat-icon>
-<mat-icon class="viz-icon-small">close</mat-icon>
-<mat-icon class="viz-icon-small">autorenew</mat-icon>
-<mat-icon class="viz-icon-small">cached</mat-icon>
-<mat-icon class="viz-icon-small">search</mat-icon>
-<mat-icon class="viz-icon-small">keyboard_arrow_down</mat-icon>
-<mat-icon class="viz-icon-small">keyboard_arrow_up</mat-icon>
-<mat-icon class="viz-icon-small">keyboard_arrow_left</mat-icon>
-<mat-icon class="viz-icon-small">keyboard_arrow_right</mat-icon>
-<mat-icon class="viz-icon-small">unfold_more</mat-icon>
-<mat-icon class="viz-icon-small">ore_horiz</mat-icon>
+<div class="example-wrapper">
+  <mat-icon class="viz-icon-small">check</mat-icon>
+  <mat-icon class="viz-icon-small">close</mat-icon>
+  <mat-icon class="viz-icon-small">autorenew</mat-icon>
+  <mat-icon class="viz-icon-small">cached</mat-icon>
+  <mat-icon class="viz-icon-small">search</mat-icon>
+  <mat-icon class="viz-icon-small">keyboard_arrow_down</mat-icon>
+  <mat-icon class="viz-icon-small">keyboard_arrow_up</mat-icon>
+  <mat-icon class="viz-icon-small">keyboard_arrow_left</mat-icon>
+  <mat-icon class="viz-icon-small">keyboard_arrow_right</mat-icon>
+  <mat-icon class="viz-icon-small">unfold_more</mat-icon>
+  <mat-icon class="viz-icon-small">ore_horiz</mat-icon>
+</div>
