--- a/src/assets/examples/login-basic/login-basic.component.scss
+++ b/src/assets/examples/login-basic/login-basic.component.scss
@@ -1,5 +1,8 @@
 :host {
   .login-wrapper {
-    display: inline-block;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%)
   }
 }
