--- a/src/assets/examples/month-picker-range/month-picker-range.component.html
+++ b/src/assets/examples/month-picker-range/month-picker-range.component.html
@@ -1,1 +1,8 @@
-<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="month" rangeMode placeholder="Choose a month and year range"></viz-date-range-picker>
+<div class="example-wrapper">
+  <viz-date-range-picker
+    (onApply)="applyDateRange($event)"
+    typeMode="month"
+    rangeMode
+    placeholder="Choose a month and year range"
+  ></viz-date-range-picker>
+</div>
