--- a/src/assets/examples/month-picker-single/month-picker-single.component.html
+++ b/src/assets/examples/month-picker-single/month-picker-single.component.html
@@ -1,1 +1,7 @@
-<viz-date-range-picker (onApply)="applyDateRange($event)" typeMode="month" placeholder="Month and year"></viz-date-range-picker>
+<div class="example-wrapper">
+  <viz-date-range-picker
+    (onApply)="applyDateRange($event)"
+    typeMode="month"
+    placeholder="Month and year"
+  ></viz-date-range-picker>
+</div>
