--- a/src/assets/examples/snackbar-basic/snackbar-basic.component.html
+++ b/src/assets/examples/snackbar-basic/snackbar-basic.component.html
@@ -1,1 +1,3 @@
-<button mat-button (click)="openSnackBar()">Show PC snack-bar</button>
+<div class="example-wrapper">
+  <button mat-button (click)="openSnackBar()">Show PC snack-bar</button>
+</div>
