--- a/src/assets/examples/table-native/table-native.component.css
+++ b/src/assets/examples/table-native/table-native.component.css
@@ -54,7 +54,8 @@ td {
 
 .example-container {
   width: 500px;
-  display: inline-flex;
+  /* display: inline-flex; */
+  margin: 0 auto;
 }
 
 .example-first-col {
