--- a/src/assets/examples/tooltip-basic/tooltip-basic.component.html
+++ b/src/assets/examples/tooltip-basic/tooltip-basic.component.html
@@ -1,1 +1,5 @@
-<mat-icon matTooltip="The state of being male, female, or transgender">info</mat-icon>
+<div class="example-wrapper">
+  <mat-icon matTooltip="The state of being male, female, or transgender"
+    >info</mat-icon
+  >
+</div>
