--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -27,8 +27,8 @@
     padding: 16px 0;
     color: #696969;
     background-color: #ffffff;
-    @media (min-width: 768px) {
-      top: 0;
+    @media (max-width: 375px) {
+      top: 35px
     }
     p {
       padding: 0;
