--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -23,7 +23,7 @@
         <span>{{userName}}</span>
         <mat-icon>{{loginMenuTrigger.menuOpen ? "arrow_drop_up":"arrow_drop_down"}}</mat-icon>
       </div>
-      <div class="navbar-hamburger" (click)='hamburgerOnClick()'>
+      <div class="navbar-hamburger" (click)='hamburgerOnClick()' [matMenuTriggerFor]="loginMenu" #loginMenuTrigger="matMenuTrigger">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
