--- a/libs/style.scss
+++ b/libs/style.scss
@@ -324,6 +324,11 @@ td.mat-cell,
     margin-top: 16px;
   }
 }
+@media (min-width: 375px) and (max-width: 768px) {
+  .mat-snack-bar-handset {
+    width: auto !important;
+  }
+}
 .cdk-overlay-pane {
   .mat-snack-bar-container {
     border-radius: 0px;
@@ -350,6 +355,8 @@ td.mat-cell,
 .viz-snackbar-desktop {
   width: 463px !important;
 }
+
+
 //radio button
 .mat-radio-label-content {
   font-size: 14px;
@@ -826,7 +833,7 @@ mat-datepicker-content.mat-datepicker-content {
   width: auto;
 }
 
-//toolbar
+// toolbar
 .mat-toolbar.mat-toolbar-single-row {
   padding: 0px 24px;
 }
@@ -1229,4 +1236,9 @@ mat-select[aria-activedescendant] {
   background: #ffffff;
   box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
     0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+}
+
+.example-centralization {
+  text-align: center;
+  margin: 0 auto;
 }
