--- a/src/assets/examples/button-basic/button-basic.component.html
+++ b/src/assets/examples/button-basic/button-basic.component.html
@@ -1,2 +1,3 @@
-<button mat-raised-button color="primary">Primary</button>
-
+<div class="example-wrapper">
+  <button mat-raised-button color="primary">Primary</button>
+</div>
