--- a/src/assets/examples/button-disable/button-disable.component.html
+++ b/src/assets/examples/button-disable/button-disable.component.html
@@ -1,2 +1,3 @@
-<button mat-raised-button color="primary" disabled="true">Button</button>
-
+<div class="example-wrapper">
+  <button mat-raised-button color="primary" disabled="true">Button</button>
+</div>
