--- a/src/assets/examples/button-icon-left/button-icon-left.component.html
+++ b/src/assets/examples/button-icon-left/button-icon-left.component.html
@@ -1,5 +1,5 @@
-<button mat-raised-button color="primary">
-    <div class="viz-button-left-icon">
-        <mat-icon>check</mat-icon>Button
-    </div>
-</button>
+<div class="example-wrapper">
+  <button mat-raised-button color="primary">
+    <div class="viz-button-left-icon"><mat-icon>check</mat-icon>Button</div>
+  </button>
+</div>
