--- a/src/assets/examples/button-text/button-text.component.html
+++ b/src/assets/examples/button-text/button-text.component.html
@@ -1,1 +1,3 @@
-<button mat-button color="primary">Text Button</button>
+<div class="example-wrapper">
+  <button mat-button color="primary">Text Button</button>
+</div>
