--- a/src/assets/examples/date-picker-basic/date-picker-basic.component.scss
+++ b/src/assets/examples/date-picker-basic/date-picker-basic.component.scss
@@ -1,9 +1,4 @@
-:host {
-  ::ng-deep {
-    .mat-form-field-wrapper {
-      width: 50%;
-      max-width: 300px;
-      margin: 0 auto;
-    }
-  }
+.example-wrapper {
+  width: 300px;
+  margin: 0 auto;
 }
