--- a/src/assets/examples/form-field-hint/form-field-hint.component.html
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.html
@@ -1,10 +1,14 @@
-<mat-form-field>
-  <input type="text"
-         matInput
-         autocomplete="off"
-         (focus)="value=''"
-         [(ngModel)]="value"
-         (blur)="value='All Member'"
-         placeholder="Member">
-  <mat-hint align="start">Form hint</mat-hint>
-</mat-form-field>
+<div class="example-centralization">
+  <mat-form-field>
+    <input
+      type="text"
+      matInput
+      autocomplete="off"
+      (focus)="value = ''"
+      [(ngModel)]="value"
+      (blur)="value = 'All Member'"
+      placeholder="Member"
+    />
+    <mat-hint align="start">Form hint</mat-hint>
+  </mat-form-field>
+</div>
