--- a/src/assets/examples/form-field-textarea/form-field-textarea.component.html
+++ b/src/assets/examples/form-field-textarea/form-field-textarea.component.html
@@ -1,6 +1,10 @@
-<mat-form-field class="example-full-width">
-    <textarea matInput
-              placeholder="Description"
-              rows="2"
-              [value]="value"></textarea>
-</mat-form-field>
+<div class="example-centralization">
+  <mat-form-field class="example-full-width">
+    <textarea
+      matInput
+      placeholder="Description"
+      rows="2"
+      [value]="value"
+    ></textarea>
+  </mat-form-field>
+</div>
