--- a/src/assets/examples/radio-button-basic/radio-button-basic.component.html
+++ b/src/assets/examples/radio-button-basic/radio-button-basic.component.html
@@ -1,2 +1,4 @@
-<mat-radio-button value="1" checked="true">Option 1</mat-radio-button>
-<mat-radio-button value="2">Option 2</mat-radio-button>
+<div class="example-centralization">
+  <mat-radio-button value="1" checked="true">Option 1</mat-radio-button>
+  <mat-radio-button value="2">Option 2</mat-radio-button>
+</div>
