--- a/src/assets/examples/radio-button-disable/radio-button-disable.component.html
+++ b/src/assets/examples/radio-button-disable/radio-button-disable.component.html
@@ -1,5 +1,6 @@
-<mat-radio-button value="1"
-                  checked="true"
-                  disabled="true">Option 1</mat-radio-button>
-<mat-radio-button value="2"
-                  disabled="true">Option 2</mat-radio-button>
+<div class="example-centralization">
+  <mat-radio-button value="1" checked="true" disabled="true"
+    >Option 1</mat-radio-button
+  >
+  <mat-radio-button value="2" disabled="true">Option 2</mat-radio-button>
+</div>
