--- a/src/assets/examples/select-basic/select-basic.component.html
+++ b/src/assets/examples/select-basic/select-basic.component.html
@@ -1,12 +1,15 @@
-<mat-form-field>
-    <mat-select placeholder="Date Type"
-                disableOptionCentering
-                disableRipple
-                panelClass="viz-select"
-                [(value)]="selected">
-        <mat-option *ngFor="let type of types"
-                    [value]="type">
-            {{type}}
-        </mat-option>
+<div class="example-wrapper">
+  <mat-form-field>
+    <mat-select
+      placeholder="Date Type"
+      disableOptionCentering
+      disableRipple
+      panelClass="viz-select"
+      [(value)]="selected"
+    >
+      <mat-option *ngFor="let type of types" [value]="type">
+        {{ type }}
+      </mat-option>
     </mat-select>
-</mat-form-field>
+  </mat-form-field>
+</div>
