--- a/src/assets/examples/slider-basic-icon/slider-basic-icon.component.html
+++ b/src/assets/examples/slider-basic-icon/slider-basic-icon.component.html
@@ -1,17 +1,11 @@
 <div class="example-wrapper">
-    <span>
-        <mat-icon>
-            remove_red_eye
-        </mat-icon>
-    </span>
-    <viz-slider min="0"
-                max="200"
-                value="120"
-                tickInterval="40"
-                thumbLabel></viz-slider>
-    <span>
-        <mat-icon>
-            remove_red_eye
-        </mat-icon>
-    </span>
+  <span> <mat-icon> remove_red_eye </mat-icon> </span>
+  <viz-slider
+    min="0"
+    max="200"
+    value="120"
+    tickInterval="40"
+    thumbLabel
+  ></viz-slider>
+  <span> <mat-icon> remove_red_eye </mat-icon> </span>
 </div>
