--- a/src/assets/examples/slider-range-icon/slider-range-icon.component.css
+++ b/src/assets/examples/slider-range-icon/slider-range-icon.component.css
@@ -1,6 +1,8 @@
 .example-wrapper {
-  display: inline-flex;
+  display: flex;
   align-items: center;
+  width: 200px;
+  margin: 0 auto;
 }
 viz-slider {
   width: 150px;
