update example viewer to iframe

--- a/src/app/shared/example-viewer/example-viewer.html
+++ b/src/app/shared/example-viewer/example-viewer.html
@@ -21,7 +21,7 @@
 
   <div class="docs-example-viewer-body" #exampleViewBody [ngClass]="getViewportClass()">
     <!-- <ng-container *ngComponentOutlet="exampleData.component"></ng-container> -->
-    <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template>
+    <!-- <ng-template [cdkPortalOutlet]="selectedPortal"></ng-template> -->
 
 
     <iframe class="viewport-iframe" frameborder="0" [src]="exampleURL | safe" sandbox="allow-same-origin allow-scripts allow-forms" [ngClass]="iframeClass()"></iframe>
