--- a/src/assets/examples/slide-toggle-disable/slide-toggle-disable.component.html
+++ b/src/assets/examples/slide-toggle-disable/slide-toggle-disable.component.html
@@ -1,1 +1,3 @@
-<mat-slide-toggle checked disabled></mat-slide-toggle>
+<div class="example-centralization">
+  <mat-slide-toggle checked disabled></mat-slide-toggle>
+</div>
