--- a/src/assets/examples/card-basic/card-basic.component.css
+++ b/src/assets/examples/card-basic/card-basic.component.css
@@ -1,8 +1,8 @@
 .benchmark-card {
-  display: inline-block;
   padding: 0px;
   width: 330px;
   text-align: left;
+  margin: 0 auto;
 }
 .benchmark {
   padding: 24px;
