--- a/src/assets/examples/menu-basic/menu-basic.component.html
+++ b/src/assets/examples/menu-basic/menu-basic.component.html
@@ -1,9 +1,9 @@
-<button mat-button [matMenuTriggerFor]="start">Menu Start</button>
-
+<div class="example-centralization">
+  <button mat-button [matMenuTriggerFor]="start">Menu Start</button>
+</div>
 <mat-menu #start="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 1</button>
   <button mat-menu-item>Content 2</button>
   <button mat-menu-item>Content 3</button>
   <button mat-menu-item>Content 4</button>
 </mat-menu>
-
