--- a/src/assets/examples/menu-nested/menu-nested.component.html
+++ b/src/assets/examples/menu-nested/menu-nested.component.html
@@ -1,4 +1,6 @@
-<button mat-button [matMenuTriggerFor]="start">Menu Start</button>
+<div class="example-centralization">
+  <button mat-button [matMenuTriggerFor]="start">Menu Start</button>
+</div>
 
 <mat-menu #start="matMenu" backdropClass="viz-menu">
   <button mat-menu-item [matMenuTriggerFor]="content1">Content 1</button>
