--- a/src/assets/examples/header-basic/header-basic.component.html
+++ b/src/assets/examples/header-basic/header-basic.component.html
@@ -1,5 +1,5 @@
 <div class="example-container">
-  <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary">
+  <viz-header title="Application" brandLink="http://vizient-toolkit.interactivelabs.com" userName="Stan Lee" type="primary">
     <div headerLogin>
       <button mat-menu-item>
         View Profile
