--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -92,7 +92,7 @@
   }
 
 
-  @media (max-width: 375px) {
+  @media screen and (max-width: 375px) {
     .nav-bar {
       .navbar-right {
         .navbar-welcome {
@@ -105,7 +105,7 @@
     }
   }
 
-  @media (min-width: 375px) {
+  @media screen and (min-width: 375px) {
     .nav-bar {
       .navbar-right {
         .navbar-hamburger {
@@ -115,7 +115,7 @@
     }
   }
 
-  @media (min-width: 768px) {
+  @media screen and (min-width: 768px) {
     .nav-bar {
       .navbar-right {
         .navbar-hamburger {
