--- a/src/assets/examples/date-picker-single/date-picker-single.component.html
+++ b/src/assets/examples/date-picker-single/date-picker-single.component.html
@@ -1,7 +1,21 @@
-<div class="example-wrapper">
-  <viz-date-range-picker
-    (onApply)="applyDateRange($event)"
-    typeMode="date"
-    placeholder="Choose a date"
-  ></viz-date-range-picker>
-</div>
+<form class="vizient-input example-wrapper">
+  <mat-form-field>
+    <input
+      matInput
+      placeholder="Choose a date"
+      [matRangeDatepicker]="resultPicker"
+      name="date"
+      typeMode="date"
+    />
+    <mat-range-datepicker
+      #resultPicker
+      (closed)="this.onClose($event)"
+      typeMode="date"
+    >
+    </mat-range-datepicker>
+    <mat-range-datepicker-toggle
+      matSuffix
+      [for]="resultPicker"
+    ></mat-range-datepicker-toggle>
+  </mat-form-field>
+</form>
