Update date picker examples code

--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -41,6 +41,12 @@
       <div app-docs-example="month-picker-single"></div>
     </div>
 
+    <div class="doc-desc-2">
+      Implement required Validators
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="date-picker-single-error"></div>
+    </div>
 
     <div class="doc-desc-2">
       Use in forms to let user enter a date range.
