--- a/src/assets/examples/date-picker-basic/date-picker-basic.component.html
+++ b/src/assets/examples/date-picker-basic/date-picker-basic.component.html
@@ -10,7 +10,7 @@
     <mat-range-datepicker
       #resultPicker
       [rangeMode]='true'
-      (closed)="this.onClose($event)"
+      (closed)="onClose()"
       typeMode="date"
     >
     </mat-range-datepicker>
