--- a/src/assets/examples/month-picker-single/month-picker-single.component.html
+++ b/src/assets/examples/month-picker-single/month-picker-single.component.html
@@ -9,7 +9,7 @@
     />
     <mat-range-datepicker
       #resultPicker
-      (closed)="this.onClose($event)"
+      (closed)="onClose()"
       typeMode="month"
     >
     </mat-range-datepicker>
