--- a/src/assets/examples/date-picker-single-error/date-picker-single-error.component.scss
+++ b/src/assets/examples/date-picker-single-error/date-picker-single-error.component.scss
@@ -1,4 +1,8 @@
 .example-wrapper {
-    width: 300px;
-    margin: 0 auto;
-  }
+  width: 300px;
+  margin: 0 auto;
+}
+.example-events {
+  width: 600px;
+  margin: 0 auto;
+}
