--- a/src/assets/examples/form-field-autocomplete/form-field-autocomplete.component.html
+++ b/src/assets/examples/form-field-autocomplete/form-field-autocomplete.component.html
@@ -1,4 +1,4 @@
-<form class="example-form">
+<div class="example-centralization">
     <mat-form-field class="example-full-width">
       <input type="text" placeholder="Assignee" aria-label="Assignee" matInput [formControl]="myControl" [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -7,4 +7,6 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
-  </form>
+  </div>
+
+  
