Revert "Dev | Logo within header example component should not be clickable"
This reverts commit da2c37d2c424dd5733d3976b16e212ae9e74a67e.

--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-wrapper">
     <div class="navbar-header">
       <span class="navbar-brand">
-        <a [href]="brankLink ? brandLink : 'javascript:void(0)'">
+        <a [href]="brandLink">
           <img *ngIf="svgIcon" [src]="svgIcon" alt="Vizient" />
           <svg *ngIf="!svgIcon" width="113" height="28" xmlns="http://www.w3.org/2000/svg">
             <g fill="#FF4D00" fill-rule="evenodd">
