--- a/src/assets/examples/header-application/header-application.component.html
+++ b/src/assets/examples/header-application/header-application.component.html
@@ -1,5 +1,5 @@
 <div class="example-container">
-  <viz-header title="Application" userName="Stan Lee" type="primary" application="true">
+  <viz-header title="Application" brandLink="/" userName="Stan Lee" type="primary" application="true">
     <div headerApplication>
       <button mat-menu-item>
         MDA Dashboard
