--- a/libs/components/header/viz-header.component.html
+++ b/libs/components/header/viz-header.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-wrapper">
     <div class="navbar-header">
       <span class="navbar-brand">
-        <a [href]="brandLink">
+        <a [href]="brandLink ? brandLink : 'javascript:void(0)'">
           <img *ngIf="svgIcon" [src]="svgIcon" alt="Vizient" />
           <svg *ngIf="!svgIcon" width="113" height="28" xmlns="http://www.w3.org/2000/svg">
             <g fill="#FF4D00" fill-rule="evenodd">
