--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="doc-desc-2">
-      Use in forms to let user enter a month range.
+      Use in forms to let use enter a month range.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="month-picker-range"></div>
