--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -24,11 +24,24 @@
   </div>
   <div class="doc-desc-2">
     Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
-
-
   <div class="doc-example-container">
     <div app-docs-example="stepper-basic"></div>
   </div>
+
+
+  <div class="doc-desc-2">
+    Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
+  <div class="doc-example-container">
+    <div app-docs-example="stepper-vertical"></div>
+  </div>
+
+  <div class="doc-desc-2">
+      Steppers display progress through a sequence by breaking it up into multiple logical and numbered steps. </div>
+    <div class="doc-example-container">
+      <div app-docs-example="stepper-custom"></div>
+    </div>
+
+
   <div class="doc-divider">
   </div>
   <div class="doc-title-2">
