--- a/src/app/shared/example-viewer/example-viewer.scss
+++ b/src/app/shared/example-viewer/example-viewer.scss
@@ -80,7 +80,8 @@
 }
 
 .docs-example-viewer-body {
-  padding: 40px 0;
+  // padding: 40px 0;
+  padding-top: 40px;
   white-space: nowrap;
   text-align: center;
   border-bottom: 1px solid #efefef;
