--- a/libs/style.scss
+++ b/libs/style.scss
@@ -243,7 +243,7 @@ td.mat-cell,
       }
       .mat-menu-item-submenu-trigger {
         &:hover::after {
-          color: white;
+          color: black;
         }
       }
     }
