Update checkbox content

--- a/src/assets/documents/components/checkbox.html
+++ b/src/assets/documents/components/checkbox.html
@@ -29,6 +29,10 @@
 
   </div>
 
+  <div class="doc-title-4 mb-8">
+    Checkbox
+  </div>
+
   <div class="doc-desc-2">
     Checkboxes are for making selections from a list. They let users select more than one item and allow for easy selection or
     deselection of all items with a parent checkbox.
@@ -39,6 +43,9 @@
 
   <div id="exampleWrapper">
 
+    <div class="doc-title-4 mb-8">
+      Indeterminate Checkbox
+    </div>
     <div class="doc-desc-2">
       When not all child checkboxes are checked, the parent checkbox becomes an indeterminate checkbox.
     </div>
@@ -46,6 +53,9 @@
       <div app-docs-example="checkbox-indetermine"></div>
     </div>
 
+    <div class="doc-title-4 mb-8">
+      Disabled Checkbox
+    </div>
     <div class="doc-desc-2">
       When checkbox is disabled, actions are unusable and un-clickable, it only serves the purpose of a visual representation of
       the data.
