--- a/src/document.scss
+++ b/src/document.scss
@@ -80,7 +80,7 @@ a {
   font-family: Soleto;
   font-weight: 400;
   font-size: 16px;
-  color: #28292b;
+  color: #000000;
   letter-spacing: 0;
   line-height: 24px;
 }
@@ -529,4 +529,8 @@ a {
 
 .mt-40 {
   margin-top: 40px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
 }
